# templates

./: .trivyignore  Dockerfile  NOTICE  README.md  SECURITY.md
.github/workflows/: docker-publish.yml  python-template-build-push.yml  python-template-ci.yml  sql-template-build-push.yml  template-python-service-ci.yml
python/service/: .env.example  Dockerfile  OPERATIONS.md  README.md  SECURITY.md  gunicorn_conf.py  openapi.json  pyproject.toml  pyrightconfig.json
python/service/.github/workflows/: service-build-push.yml  service-ci.yml
python/service/policies/: admin.cedar  operator.cedar  policy.cedar  schema.cedar.json
python/service/scripts/: gen_dev_jwt.py
python/service/src/: app.py  gunicorn.py  gunicorn_logger.py  main.py
python/service/src/authorization/: __init__.py  entities.py
python/service/src/bootstrap/: auth_helpers.py  capabilities.py  config.py  extensions.py  security.py
python/service/src/core/: auth_helpers.py  config.py  extensions.py  security.py
python/service/src/db/: data.py
python/service/src/db/migrations/: env.py
python/service/src/models/: document.py
python/service/src/routes/: documents.py  health.py
python/service/src/services/: document_service.py
python/service/tests/: benchmark.py  conftest.py  test_main.py
python/service/tests/contract/: test_api_contract.py  test_openapi_spec.py
python/service/tests/integration/: test_container.py
python/service/tests/integration/routes/: test_documents.py  test_openapi.py
python/service/tests/unit/: test_auth_helpers.py
python/service/tests/unit/routes/: test_documents.py  test_health.py
react/ui/: .gitignore  Dockerfile  README.md  ReferencePage.tsx  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
react/ui/src/: main.tsx  (+1 more)
sql/: Dockerfile
sql/audit/: 00_bootstrap_app.sql  01_dml_hooks.sql  02_ddl_setup.sql  03_ddl_protection.sql  04_views.sql  05_grant_app_audit.sql  README.md
ui/: README.md  package.json
ui/registry/: index.json  theme.json
(+27 files in other folders)
