[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "service-template"
version = "0.1.0"
description = "Reference Python service template with service-owned Cedar policy."
requires-python = ">=3.14"
dependencies = [
    "authentication-in-the-middle",
    "authorization-in-the-middle",
    "flask>=3.0.0",
    "flask-limiter>=3.5.0",
    "flask-talisman>=1.1.0",
    "gunicorn>=21.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "logenvelope",
    "python-dotenv>=1.2.2",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/**/*.py",
    "policies/**",
    "tests/**",
    ".github/workflows/**",
    ".env.example",
    "Dockerfile",
    "README.md",
    "OPERATIONS.md",
    "SECURITY.md",
    "gunicorn_conf.py",
    "openapi.json",
    "pyproject.toml",
    ".gitignore",
]

[tool.uv.sources]
authentication-in-the-middle = { git = "https://github.com/Neosofia/sdk.git", subdirectory = "python/authentication-middleware" }
authorization-in-the-middle = { git = "https://github.com/Neosofia/sdk.git", subdirectory = "python/authorization-middleware" }
logenvelope = { url = "https://github.com/Neosofia/sdk/releases/download/logenvelope-0.2.0/logenvelope-0.2.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "jsonschema>=4.20.0",
    "requests>=2.33.0",
    "pyjwt>=2.12.1",
    "cryptography>=48.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80 --ignore=tests/integration"
markers = [
    "unit: pure function tests with no external I/O",
    "contract: API contract and response shape tests",
    "integration: live container or compose-backed tests",
]
pythonpath = ["src"]
